[package]
name = "yasai"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.2"
once_cell = "1.9.0"
rand = "0.8.5"
shogi_core = "0.1.4"

[dev-dependencies]
shogi_usi_parser = "0.1.0"

[profile.release]
lto = true

[profile.bench]
lto = true
