[package]
name = "yasai"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
simd = []

[dependencies]
arrayvec = "0.7.2"
once_cell = "1.9.0"
rand = "0.8.5"
shogi_core = "0.1.4"
cfg-if = "1.0.0"

[dev-dependencies]
shogi_usi_parser = "0.1.0"

[profile.release]
lto = true

[profile.bench]
lto = true
